--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -72,14 +72,14 @@ h5,
 h6 {
   padding: 0;
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 700;
+  //font-family: 'Open Sans', sans-serif;
+  //font-weight: 700;
 }
 
-h1 {
-  font-size: 18px;
-  font-weight: 600;
-}
+//h1 {
+//  font-size: 18px;
+//  font-weight: 600;
+//}
 
 svg, video {
   display: inline-block;
