Badge: basic styles

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,3 +1,13 @@
+.sandbox {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+
+  & > * {
+    margin-bottom: 15px;
+  }
+}
+
 *,
 *::after,
 *::before {
