--- a/src/components/L/L.module.scss
+++ b/src/components/L/L.module.scss
@@ -7,7 +7,44 @@
   font-size: cRem(16);
   line-height: cRem(26);
   font-weight: 500;
-  text-decoration: underline;
+
+  --ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
+
+
+  &::before,
+  &::after {
+    position: absolute;
+    content: "";
+    left: 0;
+    bottom: -0.1rem;
+    display: block;
+    width: 100%;
+    height: 2px;
+    background: $Dubai;
+    transition: 1.1s var(--ease-out-expo);
+  }
+
+  &::before {
+    transform: scaleX(0);
+    transform-origin: left;
+  }
+
+  &::after {
+    transform-origin: right;
+    transition-delay: 0.25s;
+  }
+
+  &:hover {
+    &::before {
+      transform: scaleX(1);
+      transition-delay: 0.25s;
+    }
+
+    &::after {
+      transform: scaleX(0);
+      transition-delay: 0s;
+    }
+  }
 
   &:focus {
     outline: $Future solid 2px;
