Avatar: add new props for avatar, add Avatar component overload,  create some generic types

--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -2,23 +2,19 @@
 @import '../../styles/colors';
 @import '../../styles/mixins';
 
-@function unite($list, $glue: ", ") {
-  @if length($list) == 1 {
-    @return $list;
-  } @else {
-    $string: "";
-    @each $item in $list {
-      @if $string != "" { $string: $string + $glue; }
-      $string: $string + $item;
-    }
-
-    @return $string;
-  }
-}
-
 .avatar {
 
-  &.huge, &.large, &.middle, &.small, &.supersmall, &.tiny {
+  &.logo {
+    border: 1px dashed red;
+    &.huge, &.large, &.middle, &.small, &.super-small, &.tiny {
+      .name {
+        color: red;
+        font-size: 14px;
+      }
+    }
+  }
+
+  &.huge, &.large, &.middle, &.small, &.super-small, &.tiny {
     border-radius: 50%;
     @include flex(center, center);
     .name {
@@ -30,7 +26,6 @@
   &.huge {
     width: cRem(120);
     height: cRem(120);
-    background: $NewYear;
     .name {
       font-size: cRem(50);
     }
@@ -39,7 +34,6 @@
   &.large {
     width: cRem(64);
     height: cRem(64);
-    background: $Birthday;
     .name {
       font-size: cRem(28);
     }
@@ -48,7 +42,6 @@
   &.middle {
     width: cRem(56);
     height: cRem(56);
-    background: $Extrovert;
     .name {
       font-size: cRem(28);
     }
@@ -57,16 +50,14 @@
   &.small {
     width: cRem(40);
     height: cRem(40);
-    background: $Introvert;
     .name {
       font-size: cRem(18);
     }
   }
 
-  &.supersmall {
+  &.super-small {
     width: cRem(32);
     height: cRem(32);
-    background: $Extrovert;
     .name {
       font-size: cRem(16);
     }
@@ -75,10 +66,26 @@
   &.tiny {
     width: cRem(24);
     height: cRem(24);
-    background: $NewYear;
     .name {
       font-size: cRem(12);
     }
+  }
+
+  &.new-year {
+    background: $NewYear;
+  }
+
+  &.birthday {
+    background: $Birthday;
+  }
+
+  &.extrovert {
+    background: $Extrovert;
+  }
+
+  &.introvert {
+    background: $Introvert;
+
   }
 
 }
