--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -2,6 +2,8 @@
 $Future: #0088FF;
 $Dirty: #6E7E92;
 $Dubai: #000C37;
+$DubaiO0_3: rgb(0, 12, 55, .3);
+$DubaiO0_5: rgb(0, 12, 55, .5);
 
 //Secondary
 $KillBill: #F52C5C;
