Avatar: return file from onAdd calllback, create options to connect Avatar component with state

--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -64,6 +64,10 @@
         }
 
         .add-btn {
+          cursor: pointer;
+          input[type=file] {
+            display: none;
+          }
         }
 
         .remove-btn {
