Avatar: handle logic is src===true

--- a/src/components/Avatar/Avatar.module.scss
+++ b/src/components/Avatar/Avatar.module.scss
@@ -24,6 +24,10 @@
   overflow: hidden;
   cursor: pointer;
 
+  .image {
+    object-fit: fill;
+  }
+
   &.logo {
     border: 1px dashed $Storm;
 
