--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/colors";
+@import '../../styles/colors';
 
 .badge {
   padding: 8px 9px;
@@ -11,7 +11,7 @@
 
   &.basic {
     background: $Dubai;
-    transition: all .2s ease;
+    transition: all 0.2s ease;
 
     &:hover {
       background: $FutureHover;
@@ -25,13 +25,12 @@
       background: $Dubai;
       outline: $Future solid 2px;
     }
-
   }
 
   &.notification {
     position: relative;
     background: $Birthday;
-    transition: all .2s ease;
+    transition: all 0.2s ease;
     overflow: hidden;
 
     &:before {
@@ -42,7 +41,7 @@
       width: 100%;
       height: 100%;
       background: $DiscoManHover;
-      transition: all .2s ease;
+      transition: all 0.2s ease;
       z-index: 1;
     }
 
@@ -78,12 +77,12 @@
   .value {
     position: relative;
     z-index: 2;
-    color: #fff
+    color: #fff;
   }
 }
 
 .badge.notification:hover {
   &:before {
-    left: 0
+    left: 0;
   }
 }
