--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,45 +1,45 @@
 //Primary
-$Future: #0088FF;
-$Dirty: #6E7E92;
-$Dubai: #000C37;
-$DubaiO0_3: rgb(0, 12, 55, .3);
-$DubaiO0_5: rgb(0, 12, 55, .5);
+$Future: #0088ff;
+$Dirty: #6e7e92;
+$Dubai: #000c37;
+$DubaiO0_3: rgb(0, 12, 55, 0.3);
+$DubaiO0_5: rgb(0, 12, 55, 0.5);
 
 //Secondary
-$KillBill: #F52C5C;
-$Cucumber: #02BCB1;
-$Amber: #F8EB66;
+$KillBill: #f52c5c;
+$Cucumber: #02bcb1;
+$Amber: #f8eb66;
 
 //Special palette
-$Storm: #9EA9B9;
-$Rain: #C9CFDB;
-$Mood: #E0E4EC;
-$Ice: #EFF1F6;
-$Lapland: #F8F9FD;
+$Storm: #9ea9b9;
+$Rain: #c9cfdb;
+$Mood: #e0e4ec;
+$Ice: #eff1f6;
+$Lapland: #f8f9fd;
 
 //Blue
-$FuturePress: #006FF1;
-$FutureHover: #50ADFF;
-$FutureLight: #EAF5FF;
+$FuturePress: #006ff1;
+$FutureHover: #50adff;
+$FutureLight: #eaf5ff;
 
 //Green
 $CucumberPress: #019990;
-$CucumberHover: #09D1C5;
-$CucumberLight: #DDF8F6;
+$CucumberHover: #09d1c5;
+$CucumberLight: #ddf8f6;
 
 //Red
-$KillBillPress: #F20C43;
-$KillBillHover: #FF517B;
-$KillBillLight: #FFF2F5;
+$KillBillPress: #f20c43;
+$KillBillHover: #ff517b;
+$KillBillLight: #fff2f5;
 
 //Purple
-$DiscoManPress: #3F4CF1;
-$DiscoManHover: #868EF9;
-$DiscoManLight: #F5F6FF;
+$DiscoManPress: #3f4cf1;
+$DiscoManHover: #868ef9;
+$DiscoManLight: #f5f6ff;
 
 //Gradients
-$NewYear: linear-gradient(59.74deg, #13C549 0%, #0DBBBB 100%);
-$Birthday: linear-gradient(59.74deg, #72AEFF 0%, #8730FF 100%);
-$Introvert: linear-gradient(59.74deg, #2DC8ED 0%, #548AF0 100%);
-$Extrovert: linear-gradient(59.74deg, #FFAB1D 0%, #F8501C 100%);
-$Redrum: linear-gradient(59.74deg, #FF3B57 0%, #892168 100%);
+$NewYear: linear-gradient(59.74deg, #13c549 0%, #0dbbbb 100%);
+$Birthday: linear-gradient(59.74deg, #72aeff 0%, #8730ff 100%);
+$Introvert: linear-gradient(59.74deg, #2dc8ed 0%, #548af0 100%);
+$Extrovert: linear-gradient(59.74deg, #ffab1d 0%, #f8501c 100%);
+$Redrum: linear-gradient(59.74deg, #ff3b57 0%, #892168 100%);
