--- a/src/styles/functions.scss
+++ b/src/styles/functions.scss
@@ -1,10 +1,10 @@
-@use "sass:math";
-@use "sass:meta";
+@use 'sass:math';
+@use 'sass:meta';
 
 @function strip-unit($value) {
-  @if meta.type-of($value) != "number" {
+  @if meta.type-of($value) != 'number' {
     @error "Invalid `#{meta.type-of($value)}` type. Choose a number type instead.";
-  } @else if meta.type-of($value) == "number" and not math.is-unitless($value) {
+  } @else if meta.type-of($value) == 'number' and not math.is-unitless($value) {
     @return math.div($value, ($value * 0 + 1));
   }
 
@@ -12,7 +12,7 @@
 }
 
 @function cRem($size, $formulaOnly: false) {
-  $remSize: strip-unit($size)*0.1; // because of --rem-base = 10px
+  $remSize: strip-unit($size) * 0.1; // because of --rem-base = 10px
 
   $formula: '#{$remSize} * var(--rem-base)';
 
