--- a/src/library-components/Avatar/Avatar.module.scss
+++ b/src/library-components/Avatar/Avatar.module.scss
@@ -24,7 +24,9 @@
   cursor: pointer;
 
   .image {
-    object-fit: fill;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   &.logo {
