--- a/src/library-components/Typography/Typography.module.scss
+++ b/src/library-components/Typography/Typography.module.scss
@@ -40,6 +40,16 @@
 // /generics
 
 // Headers
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  &.bold {
+    font-weight: 700;
+  }
+
+  &.semi-bold {
+    font-weight: 600;
+  }
+}
+
 .h1 {
   font-size: cRem(54);
   line-height: cRem(60);
