Storybook: start story for not headers elements

--- a/.storybook/index.css
+++ b/.storybook/index.css
@@ -19,3 +19,10 @@
     --rem-base: 10px;
   }
 }
+
+h6.storybook-test-header {
+  color: darkblue;
+  border: 1px solid red;
+  width: 200px;
+  text-align: center;
+}
